PR 24 - Consolidate Duplicate Tool-Call Lifecycle Records