@@ -2,6 +2,7 @@ package com.lokiscale.loomspan.internal.core;
 
 import org.springframework.lang.Nullable;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
@@ -29,6 +30,11 @@ public record ToolTraceContext(String capabilityName, @Nullable String linkedTas
         {
             metadata.put("unplanned", true);
         }
-        return Map.copyOf(metadata);
+        metadata.forEach((key, value) ->
+        {
+            Objects.requireNonNull(key, "metadata key must not be null");
+            Objects.requireNonNull(value, "metadata value must not be null");
+        });
+        return Collections.unmodifiableMap(metadata);
     }
 }
